--- a/net/Makefile
+++ b/net/Makefile
@@ -1,320 +1,321 @@
-COMMENT = Networking tools
+    COMMENT = Networking tools
 
-SUBDIR += 44bsd-rdist
-SUBDIR += R-cran-pingr
-SUBDIR += activemq
-SUBDIR += akonadi-calendar
-SUBDIR += akonadi-contacts
-SUBDIR += akonadi-search
-SUBDIR += akonadi-mime
-SUBDIR += aquantia-atlantic-kmod
-SUBDIR += asio
-SUBDIR += avahi
-SUBDIR += avahi-app
-SUBDIR += avahi-autoipd
-SUBDIR += avahi-gtk
-SUBDIR += avahi-gtk3
-SUBDIR += avahi-header
-SUBDIR += avahi-libdns
-SUBDIR += avahi-qt5
-SUBDIR += avahi-sharp
-SUBDIR += aws-ec2-imdsv2-get
-SUBDIR += bmon
-SUBDIR += boinc-client
-SUBDIR += bsdec2-image-upload
-SUBDIR += bwi-firmware-kmod
-SUBDIR += bwn-firmware-kmod
-SUBDIR += calendarsupport
-SUBDIR += czmq
-SUBDIR += daq
-SUBDIR += dhcp6
-SUBDIR += dhcpdump
-SUBDIR += dictd
-SUBDIR += dual-dhclient
-SUBDIR += empty
-SUBDIR += eventviews
-SUBDIR += fping
-SUBDIR += freebsd-telnetd
-SUBDIR += freebsd-uucp
-SUBDIR += freerdp
-SUBDIR += freerdp3
-SUBDIR += geoclue
-SUBDIR += geocode-glib
-SUBDIR += geocode-glib2
-SUBDIR += geoipupdate
-SUBDIR += gfbgraph
-SUBDIR += gitup
-SUBDIR += glib-networking
-SUBDIR += gnet2
-SUBDIR += gnome-nettool
-SUBDIR += gnome-online-accounts
-SUBDIR += google-cloud-sdk
-SUBDIR += gopher
-SUBDIR += grilo
-SUBDIR += grilo-plugins
-SUBDIR += gstreamer1-plugins-srtp
-SUBDIR += gtk-vnc
-SUBDIR += hostapd
-SUBDIR += hping
-SUBDIR += htpdate
-SUBDIR += ilbc
-SUBDIR += incidenceeditor
-SUBDIR += intel-em-kmod
-SUBDIR += intel-iavf-kmod
-SUBDIR += intel-ice-kmod
-SUBDIR += intel-igb-kmod
-SUBDIR += intel-irdma-kmod
-SUBDIR += intel-ix-kmod
-SUBIDR += intel-ixl-kmod
-SUBIDR += intel-ixv-kmod
-SUBDIR += isboot-kmod
-SUBDIR += isc-dhcp44-client
-SUBDIR += isc-dhcp44-relay
-SUBDIR += isc-dhcp44-server
-SUBDIR += jrdesktop
-SUBDIR += kea
-SUBDIR += kcalutils
-SUBDIR += kdenetwork
-SUBDIR += kdenetwork-filesharing
-SUBDIR += kf5-kcalendarcore
-SUBDIR += kf5-kcontacts
-SUBDIR += kf5-kdav
-SUBDIR += kf5-kholidays
-SUBDIR += kf5-kxmlrpcclient
-SUBDIR += kf5-syndication
-SUBDIR += kf6-kcalendarcore
-SUBDIR += kf6-kcontacts
-SUBDIR += kf6-kdav
-SUBDIR += kf6-kholidays
-SUBDIR += kf6-syndication
-SUBDIR += kget
-SUBDIR += kidentitymanagement
-SUBDIR += kimap
-SUBDIR += kitinerary
-SUBDIR += kldap
-SUBDIR += kmailtransport
-SUBDIR += kmbox
-SUBDIR += kmime
-SUBDIR += kontactinterface
-SUBDIR += kpimtextedit
-SUBDIR += krdc
-SUBDIR += krfb
-SUBDIR += ksmtp
-SUBDIR += ktnef
-SUBDIR += mailcommon
-SUBDIR += mailimporter
-SUBDIR += mimetreeparser
-SUBDIR += realtek-re-kmod
-SUBDIR += realtek-re-kmod198
-SUBDIR += rubygem-connection_pool
-SUBDIR += rubygem-http_parser.rb
-SUBDIR += rubygem-net-protocol
-SUBDIR += rubygem-serverengine
-SUBDIR += rubygem-uri
-SUBDIR += ldap2dns
-SUBDIR += ldapdiff
-SUBDIR += libarcus
-SUBDIR += libcloudproviders
-SUBDIR += libdnet
-SUBDIR += libgravatar
-SUBDIR += libgrss
-SUBDIR += libgweather
-SUBDIR += libgweather4
-SUBDIR += libkgapi
-SUBDIR += libksieve
-SUBDIR += libmateweather
-SUBDIR += libmaxminddb
-SUBDIR += libnatpmp
-SUBDIR += libndp
-SUBDIR += libnet
-SUBDIR += libnfs
-SUBDIR += liboauth
-SUBDIR += libpaho-mqtt3
-SUBDIR += libpcap
-SUBDIR += libpcapnav
-SUBDIR += libproxy
-SUBDIR += librest1
-SUBDIR += librsync
-SUBDIR += libslirp
-SUBDIR += libsrtp2
-SUBDIR += libutp
-SUBDIR += libvncserver
-SUBDIR += libwebsockets
-SUBDIR += libzapojit
-SUBDIR += libzmq4
-SUBDIR += liferea
-SUBDIR += linux-c7-avahi-libs
-SUBDIR += linux-c7-openldap
-SUBDIR += linux-c7-tcp_wrappers-libs
-SUBDIR += linux-rl9-avahi-libs
-SUBDIR += linux-rl9-libproxy
-SUBDIR += linux-rl9-openldap
-SUBDIR += linux-rl9-tcp_wrappers-libs
-SUBDIR += liveMedia
-SUBDIR += luasocket
-SUBDIR += mDNSResponder
-SUBDIR += malo-firmware-kmod
-SUBDIR += messagelib
-SUBDIR += miniupnpc
-SUBDIR += mosquitto
-SUBDIR += motsognir
-SUBDIR += mtr
-SUBDIR += mtr-nox11
-SUBDIR += nanomsg
-SUBDIR += netatalk3
-SUBDIR += netcat
-SUBDIR += netclasses
-SUBDIR += nload
-SUBDIR += norm
-SUBDIR += nss_ldap
-SUBDIR += ntp
-SUBDIR += ntpsec
-SUBDIR += openldap25-client
-SUBDIR += openldap25-server
-SUBDIR += openldap26-client
-SUBDIR += openldap26-server
-SUBDIR += openmpi
-SUBDIR += openmpi4
-SUBDIR += openntpd
-SUBDIR += openpgm
-SUBDIR += openrsync
-SUBDIR += openslp
-SUBDIR += ortp
-SUBDIR += p5-GeoIP2
-SUBDIR += p5-IO-Socket-INET6
-SUBDIR += p5-IO-Socket-IP
-SUBDIR += p5-IO-Socket-Socks
-SUBDIR += p5-IP-Country
-SUBDIR += p5-MaxMind-DB-Common
-SUBDIR += p5-MaxMind-DB-Reader
-SUBDIR += p5-MaxMind-DB-Reader-XS
-SUBDIR += p5-Net
-SUBDIR += p5-Net-CIDR-Lite
-SUBDIR += p5-Net-FTP-File
-SUBDIR += p5-Net-HTTP
-SUBDIR += p5-Net-IP-Minimal
-SUBDIR += p5-Net-Libdnet
-SUBDIR += p5-Net-RabbitMQ
-SUBDIR += p5-Net-SSH2
-SUBDIR += p5-Net-Server
-SUBDIR += p5-Net-Telnet
-SUBDIR += p5-Net-Works
-SUBDIR += p5-Net-XWhois
-SUBDIR += p5-POE-Component-Client-Keepalive
-SUBDIR += p5-POE-Component-Generic
-SUBDIR += p5-RPC-XML
-SUBDIR += p5-SOAP-Lite
-SUBDIR += p5-Socket
-SUBDIR += p5-Socket-GetAddrInfo
-SUBDIR += p5-Socket6
-SUBDIR += p5-URI
-SUBDIR += p5-XML-RPC
-SUBDIR += p5-XMLRPC-Lite
-SUBDIR += p5-perl-ldap
-SUBDIR += pear-Horde_Ldap
-SUBDIR += pear-Horde_Socket_Client
-SUBDIR += pear-Horde_Url
-SUBDIR += pear-Net_IPv4
-SUBDIR += pear-Net_IPv6
-SUBDIR += pear-Net_SMTP
-SUBDIR += pear-Net_Socket
-SUBDIR += pear-Net_URL
-SUBDIR += pear-Net_URL2
-SUBDIR += php81-ldap
-SUBDIR += php81-soap
-SUBDIR += php81-sockets
-SUBDIR += php82-ldap
-SUBDIR += php82-soap
-SUBDIR += php82-sockets
-SUBDIR += php83-ldap
-SUBDIR += php83-soap
-SUBDIR += php83-sockets
-SUBDIR += phpldapadmin
-SUBDIR += pimcommon
-SUBDIR += py-avahi
-SUBDIR += py-ec2-cli-tools
-SUBDIR += py-eventlet
-SUBDIR += py-h11
-SUBDIR += py-ifaddr
-SUBDIR += py-impacket
-SUBDIR += py-ldap3
-SUBDIR += py-ldapdomaindump
-SUBDIR += py-mpi4py
-SUBDIR += py-netaddr
-SUBDIR += py-netifaces
-SUBDIR += py-ntplib
-SUBDIR += py-oauth2
-SUBDIR += py-paho-mqtt
-SUBDIR += py-portend
-SUBDIR += py-pysendfile
-SUBDIR += py-pysocks
-SUBDIR += py-python-socks
-SUBDIR += py-qt5-networkauth
-SUBDIR += py-s3cmd
-SUBDIR += py-s3transfer
-SUBDIR += py-siosocks
-SUBDIR += py-speedtest-cli
-SUBDIR += py-trio
-SUBDIR += py-trio-websocket
-SUBDIR += py-twitter-tools
-SUBDIR += py-uritemplate
-SUBDIR += py-uritools
-SUBDIR += py-urllib3
-SUBDIR += py-url-normalize
-SUBDIR += py-wsproto
-SUBDIR += py-zeroconf
-SUBDIR += qt5-network
-SUBDIR += qt5-networkauth
-SUBDIR += qt6-coap
-SUBDIR += qt6-mqtt
-SUBDIR += qt6-networkauth
-SUBDIR += rabbitmq
-SUBDIR += rabbitmq-c
-SUBDIR += rclone
-SUBDIR += rdesktop
-SUBDIR += remmina
-SUBDIR += remotedesk
-SUBDIR += rsync
-SUBDIR += samba413
-SUBDIR += samba416
-SUBDIR += sdl_net
-SUBDIR += smbldap-tools
-SUBDIR += socat
-SUBDIR += speedtest-go
-SUBDIR += tigervnc-server
-SUBDIR += tigervnc-viewer
-SUBDIR += tintin++
-SUBDIR += tiny-network-utilities
-SUBDIR += tshark
-SUBDIR += tsocks
-SUBDIR += uhttpmock
-SUBDIR += ulxmlrpcpp
-SUBDIR += uriparser
-SUBDIR += vde2
-SUBDIR += vether-kmod
-SUBDIR += vinagre
-SUBDIR += vino
-SUBDIR += vncreflector
-SUBDIR += wifi-firmware-ath10k-kmod
-SUBDIR += wifi-firmware-ath11k-kmod
-SUBDIR += wifi-firmware-ath12k-kmod
-SUBDIR += wifi-firmware-iwlwifi-kmod
-SUBDIR += wifi-firmware-kmod
-SUBDIR += wifi-firmware-mt76-kmod
-SUBDIR += wifi-firmware-mt7601u-kmod
-SUBDIR += wifi-firmware-rtw88-kmod
-SUBDIR += wifi-firmware-rtw89-kmod
-SUBDIR += wireguard-go
-SUBDIR += wireshark
-SUBDIR += x11vnc
-SUBDIR += xmlrpc-c
-SUBDIR += xmlrpc-epi
-SUBDIR += yaz
-SUBDIR += zebra
-SUBDIR += zebra-server
-SUBDIR += zerotier
-SUBDIR += zillion
-SUBDIR += zmap
-SUBDIR += zsync
+    SUBDIR += 44bsd-rdist
+    SUBDIR += R-cran-pingr
+    SUBDIR += activemq
+    SUBDIR += akonadi-calendar
+    SUBDIR += akonadi-contacts
+    SUBDIR += akonadi-mime
+    SUBDIR += akonadi-search
+    SUBDIR += aquantia-atlantic-kmod
+    SUBDIR += asio
+    SUBDIR += avahi
+    SUBDIR += avahi-app
+    SUBDIR += avahi-autoipd
+    SUBDIR += avahi-gtk
+    SUBDIR += avahi-gtk3
+    SUBDIR += avahi-header
+    SUBDIR += avahi-libdns
+    SUBDIR += avahi-qt5
+    SUBDIR += avahi-sharp
+    SUBDIR += aws-ec2-imdsv2-get
+    SUBDIR += bmon
+    SUBDIR += boinc-client
+    SUBDIR += bsdec2-image-upload
+    SUBDIR += bwi-firmware-kmod
+    SUBDIR += bwn-firmware-kmod
+    SUBDIR += calendarsupport
+    SUBDIR += czmq
+    SUBDIR += daq
+    SUBDIR += dhcp6
+    SUBDIR += dhcpdump
+    SUBDIR += dictd
+    SUBDIR += dual-dhclient
+    SUBDIR += empty
+    SUBDIR += eventviews
+    SUBDIR += fping
+    SUBDIR += freebsd-telnetd
+    SUBDIR += freebsd-uucp
+    SUBDIR += freerdp
+    SUBDIR += freerdp3
+    SUBDIR += geoclue
+    SUBDIR += geocode-glib
+    SUBDIR += geocode-glib2
+    SUBDIR += geoipupdate
+    SUBDIR += gfbgraph
+    SUBDIR += gitup
+    SUBDIR += glib-networking
+    SUBDIR += gnet2
+    SUBDIR += gnome-nettool
+    SUBDIR += gnome-online-accounts
+    SUBDIR += google-cloud-sdk
+    SUBDIR += gopher
+    SUBDIR += grilo
+    SUBDIR += grilo-plugins
+    SUBDIR += gstreamer1-plugins-srtp
+    SUBDIR += gtk-vnc
+    SUBDIR += hostapd
+    SUBDIR += hping
+    SUBDIR += htpdate
+    SUBDIR += ilbc
+    SUBDIR += incidenceeditor
+    SUBDIR += intel-em-kmod
+    SUBDIR += intel-iavf-kmod
+    SUBDIR += intel-ice-kmod
+    SUBDIR += intel-igb-kmod
+    SUBDIR += intel-irdma-kmod
+    SUBDIR += intel-ix-kmod
+    SUBDIR += intel-ixl-kmod
+    SUBDIR += intel-ixv-kmod
+    SUBDIR += isboot-kmod
+    SUBDIR += isc-dhcp44-client
+    SUBDIR += isc-dhcp44-relay
+    SUBDIR += isc-dhcp44-server
+    SUBDIR += jrdesktop
+    SUBDIR += kcalutils
+    SUBDIR += kdenetwork
+    SUBDIR += kdenetwork-filesharing
+    SUBDIR += kea
+    SUBDIR += kf5-kcalendarcore
+    SUBDIR += kf5-kcontacts
+    SUBDIR += kf5-kdav
+    SUBDIR += kf5-kholidays
+    SUBDIR += kf5-kxmlrpcclient
+    SUBDIR += kf5-syndication
+    SUBDIR += kf6-kcalendarcore
+    SUBDIR += kf6-kcontacts
+    SUBDIR += kf6-kdav
+    SUBDIR += kf6-kholidays
+    SUBDIR += kf6-syndication
+    SUBDIR += kget
+    SUBDIR += kidentitymanagement
+    SUBDIR += kimap
+    SUBDIR += kitinerary
+    SUBDIR += kldap
+    SUBDIR += kmailtransport
+    SUBDIR += kmbox
+    SUBDIR += kmime
+    SUBDIR += kontactinterface
+    SUBDIR += kpimtextedit
+    SUBDIR += krdc
+    SUBDIR += krfb
+    SUBDIR += ksmtp
+    SUBDIR += ktnef
+    SUBDIR += ldap2dns
+    SUBDIR += ldapdiff
+    SUBDIR += libarcus
+    SUBDIR += libcloudproviders
+    SUBDIR += libdnet
+    SUBDIR += libgravatar
+    SUBDIR += libgrss
+    SUBDIR += libgweather
+    SUBDIR += libgweather4
+    SUBDIR += libkgapi
+    SUBDIR += libksieve
+    SUBDIR += libmateweather
+    SUBDIR += libmaxminddb
+    SUBDIR += libnatpmp
+    SUBDIR += libndp
+    SUBDIR += libnet
+    SUBDIR += libnfs
+    SUBDIR += liboauth
+    SUBDIR += libpaho-mqtt3
+    SUBDIR += libpcap
+    SUBDIR += libpcapnav
+    SUBDIR += libproxy
+    SUBDIR += librest1
+    SUBDIR += librsync
+    SUBDIR += libslirp
+    SUBDIR += libsrtp2
+    SUBDIR += libutp
+    SUBDIR += libvncserver
+    SUBDIR += libwebsockets
+    SUBDIR += libzapojit
+    SUBDIR += libzmq4
+    SUBDIR += liferea
+    SUBDIR += linux-c7-avahi-libs
+    SUBDIR += linux-c7-openldap
+    SUBDIR += linux-c7-tcp_wrappers-libs
+    SUBDIR += linux-rl9-avahi-libs
+    SUBDIR += linux-rl9-libproxy
+    SUBDIR += linux-rl9-openldap
+    SUBDIR += linux-rl9-tcp_wrappers-libs
+    SUBDIR += liveMedia
+    SUBDIR += luasocket
+    SUBDIR += mDNSResponder
+    SUBDIR += mailcommon
+    SUBDIR += mailimporter
+    SUBDIR += malo-firmware-kmod
+    SUBDIR += messagelib
+    SUBDIR += mimetreeparser
+    SUBDIR += miniupnpc
+    SUBDIR += mosquitto
+    SUBDIR += motsognir
+    SUBDIR += mtr
+    SUBDIR += mtr-nox11
+    SUBDIR += nanomsg
+    SUBDIR += netatalk3
+    SUBDIR += netcat
+    SUBDIR += netclasses
+    SUBDIR += nload
+    SUBDIR += norm
+    SUBDIR += nss_ldap
+    SUBDIR += ntp
+    SUBDIR += ntpsec
+    SUBDIR += openldap25-client
+    SUBDIR += openldap25-server
+    SUBDIR += openldap26-client
+    SUBDIR += openldap26-server
+    SUBDIR += openmpi
+    SUBDIR += openmpi4
+    SUBDIR += openntpd
+    SUBDIR += openpgm
+    SUBDIR += openrsync
+    SUBDIR += openslp
+    SUBDIR += ortp
+    SUBDIR += p5-GeoIP2
+    SUBDIR += p5-IO-Socket-INET6
+    SUBDIR += p5-IO-Socket-IP
+    SUBDIR += p5-IO-Socket-Socks
+    SUBDIR += p5-IP-Country
+    SUBDIR += p5-MaxMind-DB-Common
+    SUBDIR += p5-MaxMind-DB-Reader
+    SUBDIR += p5-MaxMind-DB-Reader-XS
+    SUBDIR += p5-Net
+    SUBDIR += p5-Net-CIDR-Lite
+    SUBDIR += p5-Net-FTP-File
+    SUBDIR += p5-Net-HTTP
+    SUBDIR += p5-Net-IP-Minimal
+    SUBDIR += p5-Net-Libdnet
+    SUBDIR += p5-Net-RabbitMQ
+    SUBDIR += p5-Net-SSH2
+    SUBDIR += p5-Net-Server
+    SUBDIR += p5-Net-Telnet
+    SUBDIR += p5-Net-Works
+    SUBDIR += p5-Net-XWhois
+    SUBDIR += p5-POE-Component-Client-Keepalive
+    SUBDIR += p5-POE-Component-Generic
+    SUBDIR += p5-RPC-XML
+    SUBDIR += p5-SOAP-Lite
+    SUBDIR += p5-Socket
+    SUBDIR += p5-Socket-GetAddrInfo
+    SUBDIR += p5-Socket6
+    SUBDIR += p5-URI
+    SUBDIR += p5-XML-RPC
+    SUBDIR += p5-XMLRPC-Lite
+    SUBDIR += p5-perl-ldap
+    SUBDIR += pear-Horde_Ldap
+    SUBDIR += pear-Horde_Socket_Client
+    SUBDIR += pear-Horde_Url
+    SUBDIR += pear-Net_IPv4
+    SUBDIR += pear-Net_IPv6
+    SUBDIR += pear-Net_SMTP
+    SUBDIR += pear-Net_Socket
+    SUBDIR += pear-Net_URL
+    SUBDIR += pear-Net_URL2
+    SUBDIR += php81-ldap
+    SUBDIR += php81-soap
+    SUBDIR += php81-sockets
+    SUBDIR += php82-ldap
+    SUBDIR += php82-soap
+    SUBDIR += php82-sockets
+    SUBDIR += php83-ldap
+    SUBDIR += php83-soap
+    SUBDIR += php83-sockets
+    SUBDIR += phpldapadmin
+    SUBDIR += pimcommon
+    SUBDIR += py-avahi
+    SUBDIR += py-ec2-cli-tools
+    SUBDIR += py-eventlet
+    SUBDIR += py-h11
+    SUBDIR += py-ifaddr
+    SUBDIR += py-impacket
+    SUBDIR += py-ldap3
+    SUBDIR += py-ldapdomaindump
+    SUBDIR += py-mpi4py
+    SUBDIR += py-netaddr
+    SUBDIR += py-netifaces
+    SUBDIR += py-ntplib
+    SUBDIR += py-oauth2
+    SUBDIR += py-paho-mqtt
+    SUBDIR += py-portend
+    SUBDIR += py-pysendfile
+    SUBDIR += py-pysocks
+    SUBDIR += py-python-socks
+    SUBDIR += py-qt5-networkauth
+    SUBDIR += py-s3cmd
+    SUBDIR += py-s3transfer
+    SUBDIR += py-siosocks
+    SUBDIR += py-speedtest-cli
+    SUBDIR += py-trio
+    SUBDIR += py-trio-websocket
+    SUBDIR += py-twitter-tools
+    SUBDIR += py-uritemplate
+    SUBDIR += py-uritools
+    SUBDIR += py-url-normalize
+    SUBDIR += py-urllib3
+    SUBDIR += py-wsproto
+    SUBDIR += py-zeroconf
+    SUBDIR += qt5-network
+    SUBDIR += qt5-networkauth
+    SUBDIR += qt6-coap
+    SUBDIR += qt6-mqtt
+    SUBDIR += qt6-networkauth
+    SUBDIR += rabbitmq
+    SUBDIR += rabbitmq-c
+    SUBDIR += rclone
+    SUBDIR += rdesktop
+    SUBDIR += realtek-re-kmod
+    SUBDIR += realtek-re-kmod198
+    SUBDIR += remmina
+    SUBDIR += remotedesk
+    SUBDIR += rsync
+    SUBDIR += rubygem-connection_pool
+    SUBDIR += rubygem-http_parser.rb
+    SUBDIR += rubygem-net-protocol
+    SUBDIR += rubygem-serverengine
+    SUBDIR += rubygem-uri
+    SUBDIR += samba413
+    SUBDIR += samba416
+    SUBDIR += sdl_net
+    SUBDIR += seaweedfs
+    SUBDIR += smbldap-tools
+    SUBDIR += socat
+    SUBDIR += speedtest-go
+    SUBDIR += tigervnc-server
+    SUBDIR += tigervnc-viewer
+    SUBDIR += tintin++
+    SUBDIR += tiny-network-utilities
+    SUBDIR += tshark
+    SUBDIR += tsocks
+    SUBDIR += uhttpmock
+    SUBDIR += ulxmlrpcpp
+    SUBDIR += uriparser
+    SUBDIR += vde2
+    SUBDIR += vether-kmod
+    SUBDIR += vinagre
+    SUBDIR += vino
+    SUBDIR += vncreflector
+    SUBDIR += wifi-firmware-ath10k-kmod
+    SUBDIR += wifi-firmware-ath11k-kmod
+    SUBDIR += wifi-firmware-ath12k-kmod
+    SUBDIR += wifi-firmware-iwlwifi-kmod
+    SUBDIR += wifi-firmware-kmod
+    SUBDIR += wifi-firmware-mt76-kmod
+    SUBDIR += wifi-firmware-mt7601u-kmod
+    SUBDIR += wifi-firmware-rtw88-kmod
+    SUBDIR += wifi-firmware-rtw89-kmod
+    SUBDIR += wireguard-go
+    SUBDIR += wireshark
+    SUBDIR += x11vnc
+    SUBDIR += xmlrpc-c
+    SUBDIR += xmlrpc-epi
+    SUBDIR += yaz
+    SUBDIR += zebra
+    SUBDIR += zebra-server
+    SUBDIR += zerotier
+    SUBDIR += zillion
+    SUBDIR += zmap
+    SUBDIR += zsync
 
 .include <bsd.port.subdir.mk>
