graphics/png: update patch

--- a/graphics/png/Makefile
+++ b/graphics/png/Makefile
@@ -48,8 +48,7 @@ CFLAGS+=	-maltivec -mvsx
 .if ${PORT_OPTIONS:MAPNG} || make(makesum)
 #PATCHFILES=	${DISTNAME}-apng.patch.gz:-p1
 # Keep this because you normally need to keep patch version in sync with release
-#PATCHFILES=	lib${PORTNAME}-${DISTVERSION}-apng.patch.gz:-p1
-PATCHFILES=	lib${PORTNAME}-1.6.47-apng.patch.gz:-p1
+PATCHFILES=	lib${PORTNAME}-${DISTVERSION}-apng.patch.gz:-p1
 .endif
 
 post-patch:
