--- a/graphics/silgraphite/Makefile
+++ b/graphics/silgraphite/Makefile
@@ -1,14 +1,19 @@
-# Created by: Dennis Herrmann <adox@mcx2.org>
-
 PORTNAME=	silgraphite
 PORTVERSION=	2.3.1
+PORTREVISION=	1
 CATEGORIES=	graphics devel
 MASTER_SITES=	SF
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Font engine for complex non-Roman writing systems
+WWW=		https://silgraphite.sourceforge.net/
 
-LICENSE=	lgpl2.1
+LICENSE=	CPL05 lgpl2.1+
+LICENSE_COMB=	dual
+LICENSE_FILE_CPL05=	${WRKSRC}/license/License_CPLv05.txt
+LICENSE_FILE_lgpl2.1+ =	${WRKSRC}/license/License_LGPLv21.txt
+LICENSE_NAME_CPL05=	Common Public License Version 0.5
+LICENSE_PERMS_CPL05=	auto-accept dist-mirror dist-sell pkg-mirror pkg-sell
 
 OPTIONS_DEFINE=	FREETYPE
 OPTIONS_DEFAULT=FREETYPE
