graphics/gle: fix build

--- a/graphics/gle/Makefile
+++ b/graphics/gle/Makefile
@@ -1,8 +1,6 @@
-
-
 PORTNAME=	gle
 PORTVERSION=	3.1.0
-PORTREVISION=	5
+PORTREVISION=	6
 CATEGORIES=	graphics
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}\
 		http://linas.org/gle/pub/ \
@@ -11,17 +9,21 @@ MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}\
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GL Tubing and Extrusion Library
+WWW=		https://linas.org/gle/
 
 LICENSE=	gpl2
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		gl libtool xorg
-USE_XORG=	ice xt xmu
+USE_XORG=	ice xext xt xmu
 USE_GL=		glut
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 LIBS+=		-L${LOCALBASE}/lib -lXext
 
 OPTIONS_DEFINE=	DOCS
+
+CFLAGS+=	-Wno-error=incompatible-function-pointer-types
 
 post-patch:
 .for file in ex_angle.c ex_cut_round.c ex_raw.c extrude.c round_cap.c segment.c texgen.c
