--- a/multimedia/mjpegtools/Makefile
+++ b/multimedia/mjpegtools/Makefile
@@ -1,61 +1,67 @@
 PORTNAME=	mjpegtools
-PORTVERSION=	2.1.0
-PORTREVISION=	1
+PORTVERSION=	2.2.1
 CATEGORIES=	multimedia
 MASTER_SITES=	SF/${PORTNAME:S/tools//}/${PORTNAME}/${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Set of tools to record/playback/edit videos in MPEG format
+WWW=		http://mjpeg.sourceforge.net/
 
 LICENSE=	gpl2+
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	v4l_compat>0:multimedia/v4l_compat
+RUN_DEPENDS=	bash:shells/bash
 
-CONFLICTS=	mplex-[0-9]*
-
-USES=		gmake jpeg libtool pathfix pkgconfig
+USES=		compiler:c++14-lang gmake gnome jpeg libtool localbase pathfix \
+		pkgconfig shebangfix
+USE_CXXSTD=	c++14
 USE_LDCONFIG=	yes
 
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--without-dga --without-x
+SHEBANG_FILES=	scripts/lav2avi.sh \
+		scripts/lav2mpeg \
+		scripts/lavtc.sh
+
+GNU_CONFIGURE=		yes
+CONFIGURE_ARGS=		--without-dga \
+			--without-libquicktime \
+			--without-x
 CONFIGURE_TARGET=	${ARCH:S/amd64/x86_64/}-portbld-${OPSYS:tl}${OSREL}
-CPPFLAGS+=	-I${LOCALBASE}/include
-LIBS+=		-L${LOCALBASE}/lib
+INSTALL_TARGET=		install-strip
+
+CONFLICTS=	mplex
 
 INFO=		mjpeg-howto
 
-OPTIONS_DEFINE=		DOCS DV GTK2 PNG QUICKTIME SDL
+OPTIONS_DEFINE=		DOCS DV GTK2 PNG SDL
 OPTIONS_DEFAULT=	GTK2 PNG SDL
 OPTIONS_SUB=		yes
 
 DV_LIB_DEPENDS=		libdv.so:multimedia/libdv
 DV_CONFIGURE_WITH=	libdv
+
 GTK2_USE=		GNOME=gtk20
 GTK2_CONFIGURE_WITH=	gtk
+
 PNG_LIB_DEPENDS=	libpng.so:graphics/png
 PNG_CONFIGURE_WITH=	libpng
-QUICKTIME_LIB_DEPENDS=	libquicktime.so:multimedia/libquicktime
-QUICKTIME_CONFIGURE_WITH=	libquicktime
-SDL_USE=		SDL=gfx,sdl
-SDL_CONFIGURE_OFF=	--without-libsdl --without-sdlgfx
 
-.include <bsd.mport.options.mk>
-
-.if ${ARCH} == "i386"
-USES+=		compiler:c++11-lang
-.endif
+SDL_USES=		sdl xorg
+SDL_USE=		SDL=gfx,sdl \
+			XORG=x11
+SDL_CONFIGURE_WITH=	libsdl \
+			sdlgfx
 
 post-patch:
 	@${REINPLACE_CMD} \
 		-e 's| \*-\*-linux\*)| *-*-*)|' \
 		-e '/ARCHFLAGS=/d' ${WRKSRC}/configure
 
-post-install:
-	@${MKDIR} ${DOCSDIR}
+post-install-DOCS-on:
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
 .for i in AUTHORS BUGS CHANGES ChangeLog HINTS NEWS PLANS README README.DV \
-	README.avilib README.glav README.AltiVec README.lavpipe \
-	README.transist TODO
-	(cd ${WRKSRC} && ${INSTALL_DATA} ${i} ${DOCSDIR})
+	README.avilib README.AltiVec README.lavpipe README.transist TODO
+	(cd ${WRKSRC} && ${INSTALL_DATA} ${i} ${FAKE_DESTDIR}${DOCSDIR})
 .endfor
 
 .include <bsd.port.mk>
