--- a/x11-toolkits/qt5-quickcontrols/Makefile
+++ b/x11-toolkits/qt5-quickcontrols/Makefile
@@ -15,7 +15,7 @@ USE_QT=		core declarative gui widgets \
 USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 post-install:
-	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+	-${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
 		${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
 
 .include <bsd.port.mk>
