--- a/graphics/libmng/files/Makefile.bsd
+++ b/graphics/libmng/files/Makefile.bsd
@@ -1,15 +1,14 @@
 LIB=	mng
-LDADD=	-lm -L${LIBDIR} -lz -llcms -ljpeg
+LDADD=	-lm -L${LIBDIR} -lz -llcms2 -ljpeg
 
-NO_PROFILE=	yes
+MK_PROFILE=	no
 SHLIB_MAJOR?=	1
 SHLIB_MINOR?=	0
 
 SRCS!=		${MAKE} -f ${.CURDIR}/makefiles/makefile.unix -V SOURCES
 
 CFLAGS+=	-I${INCDIR}
-
-.if ${WITH_MNG_OPTIMIZE} == "true"
+.if ${WITH_MNG_OPTIMIZE} == "truex"
 .for f in CHUNKINITFREE OBJCLEANUP CHUNKASSIGN CHUNKREADER
 CFLAGS+=	-DMNG_OPTIMIZE_$f
 .endfor
