--- a/devel/cereal/Makefile
+++ b/devel/cereal/Makefile
@@ -25,14 +25,9 @@ CMAKE_ON=	SKIP_PORTABILITY_TEST
 CMAKE_OFF=	BUILD_TESTS BUILD_SANDBOX WITH_WERROR
 
 NO_ARCH=	yes
+NO_TEST=	yes
 
 post-install:
 	${FIND} ${STAGEDIR}${PREFIX} -name LICENSE -delete
-
-do-test:
-	@cd ${BUILD_WRKSRC} && \
-		${SETENV} ${CONFIGURE_ENV} ${CMAKE_BIN} ${CMAKE_ARGS} -DBUILD_TESTS:BOOL=ON ${CMAKE_SOURCE_PATH} && \
-		${SETENV} ${MAKE_ENV} ${MAKE_CMD} ${MAKE_ARGS} ${ALL_TARGET} && \
-		${SETENV} ${MAKE_ENV} ${MAKE_CMD} ${MAKE_ARGS} test
 
 .include <bsd.port.mk>
