mail/roundcube: default to postgres. it's more reliable on midnightbsd

--- a/mail/roundcube/Makefile
+++ b/mail/roundcube/Makefile
@@ -30,7 +30,7 @@ USE_PHP=	mbstring session iconv dom xml intl zip filter fileinfo exif ctype
 OPTIONS_DEFINE=	LDAP GD PSPELL NSC DOCS EXAMPLES
 OPTIONS_MULTI=	DB
 OPTIONS_MULTI_DB=	MYSQL PGSQL SQLITE
-OPTIONS_DEFAULT=MYSQL
+OPTIONS_DEFAULT=PGSQL
 
 DB_DESC=	Database backend
 MYSQL_DESC=	Use MySQL backend
