mail/xmailbox: fix

--- a/mail/xmailbox/Makefile
+++ b/mail/xmailbox/Makefile
@@ -1,15 +1,20 @@
 PORTNAME=	xmailbox
 PORTVERSION=	2.5
+PORTREVISION=	1
 CATEGORIES=	mail
 MASTER_SITES=	XCONTRIB/applications
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Mailbox checker with sound and animation for X Window System
 
+LICENSE=	mit
+
 USES=		imake xorg
 USE_XORG=	xaw
 
 OPTIONS_DEFINE=	DOCS
+
+CFLAGS+=	-Wno-error=incompatible-function-pointer-types
 
 post-patch:
 	@${REINPLACE_CMD} -e "s|%%PREFIX%%|${PREFIX}|g" ${WRKSRC}/XMailbox.ad
@@ -18,9 +23,11 @@ post-install:
 	@${MKDIR} ${STAGEDIR}${DATADIR}
 	${INSTALL_DATA} ${WRKSRC}/dingdong.au ${STAGEDIR}${DATADIR}
 	${INSTALL_DATA} ${WRKSRC}/ugotmail.au ${STAGEDIR}${DATADIR}
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/DISCLAIMER ${STAGEDIR}${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/README ${STAGEDIR}${DOCSDIR}
 	${MKDIR} ${PREFIX}/share/man
+
+post-install-DOCS-on:
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/DISCLAIMER ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/README ${FAKE_DESTDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
