--- a/misc/Makefile
+++ b/misc/Makefile
@@ -45,6 +45,7 @@
     SUBDIR += klettres
     SUBDIR += kwordquiz
     SUBDIR += libkeduvocdocument
+    SUBDIR += libuuid
     SUBDIR += linux-c7-sdl12-extralibs
     SUBDIR += linux-rl9-sdl12-extralibs
     SUBDIR += linux-rl9-sdl20-extralibs
