deskutils/helpviewer: fix

--- a/deskutils/helpviewer/Makefile
+++ b/deskutils/helpviewer/Makefile
@@ -1,17 +1,20 @@
 PORTNAME=	helpviewer
 PORTVERSION=	0.3
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	deskutils gnustep
 MASTER_SITES=	http://www.roard.com/helpviewer/download/
 DISTNAME=	HelpViewer-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Online help viewer for GNUstep programs
+WWW=		http://www.roard.com/helpviewer/
 
 LICENSE=	gpl2
 
 USES=		gnustep tar:tgz
 USE_GNUSTEP=	back build
+
+ADDITIONAL_CPPFLAGS+=	-Wno-error=int-conversion
 
 post-patch:
 	${REINPLACE_CMD} -e 's|Foundation/GSXML.h|GNUstepBase/GSXML.h|' \
