multimedia/l-smash: bump for lib

--- a/multimedia/l-smash/Makefile
+++ b/multimedia/l-smash/Makefile
@@ -2,6 +2,7 @@ PORTNAME=	l-smash
 DISTVERSIONPREFIX=	v
 DISTVERSION=	2.18.0-10
 DISTVERSIONSUFFIX=	-g2c0696c
+PORTREVISION=	1
 CATEGORIES=	multimedia
 
 MAINTAINER=	ports@MidnightBSD.org
