chinese/rime-essay: typo

--- a/chinese/rime-essay/Makefile
+++ b/chinese/rime-essay/Makefile
@@ -30,6 +30,6 @@ do-install:
 do-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
 	${INSTALL_MAN} ${WRKSRC}/AUTHORS ${FAKE_DESTDIR}/${DOCSDIR}
-	${INSTALL_MAN} ${WRKSRC}/README.md ${FAKE_DESTEDIR}/${DOCSDIR}
+	${INSTALL_MAN} ${WRKSRC}/README.md ${FAKE_DESTDIR}/${DOCSDIR}
 
 .include <bsd.port.mk>
