--- a/devel/kf6-kidletime/Makefile
+++ b/devel/kf6-kidletime/Makefile
@@ -10,7 +10,7 @@ BUILD_DEPENDS=	wayland-protocols>=1.27:graphics/wayland-protocols
 LIB_DEPENDS=	libwayland-client.so:graphics/wayland \
 		libxkbcommon.so:x11/libxkbcommon
 
-USES=		cmake gl kde:6 pkgconfig qt:6 tar:xz xorg
+USES=		cmake gl kde:6 kfhack pkgconfig qt:6 tar:xz xorg
 USE_GL=		gl opengl
 USE_KDE=	ecm:build \
 		plasma-wayland-protocols:build
