--- a/devel/kf6-threadweaver/Makefile
+++ b/devel/kf6-threadweaver/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 COMMENT=	Helper for multithreaded programming
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake kde:6 qt:6 tar:xz
+USES=		cmake kde:6 kfhack qt:6 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		base
 
