--- a/devel/kf6-knotifications/Makefile
+++ b/devel/kf6-knotifications/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 
 LIB_DEPENDS=	libcanberra.so:audio/libcanberra
 
-USES=		cmake gl kde:6 qt:6 tar:xz xorg
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz xorg
 USE_GL=		gl opengl
 USE_KDE=	config coreaddons windowsystem \
 		ecm:build
