--- a/devel/kf6-kparts/Makefile
+++ b/devel/kf6-kparts/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 COMMENT=	Plugin framework for user interface components
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gettext gl kde:6 qt:6 tar:xz
+USES=		cmake gettext gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	colorscheme completion config configwidgets coreaddons i18n \
 		jobwidgets kio service solid widgetsaddons xmlgui \
