--- a/devel/kf6-kunitconversion/Makefile
+++ b/devel/kf6-kunitconversion/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 COMMENT=	Converting physical units
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gettext kde:6 qt:6 tar:xz
+USES=		cmake gettext kde:6 kfhack qt:6 tar:xz
 USE_KDE=	i18n \
 		ecm:build
 USE_QT=		base
