--- a/devel/kf6-solid/Makefile
+++ b/devel/kf6-solid/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 
 RUN_DEPENDS=	bsdisks:sysutils/bsdisks
 
-USES=		bison cmake gl kde:6 qt:6 tar:xz
+USES=		bison cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	ecm:build
 USE_QT=		base tools:build
