--- a/devel/kf6-kauth/Makefile
+++ b/devel/kf6-kauth/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 
 LIB_DEPENDS=	libpolkit-qt6-core-1.so:sysutils/polkit-qt-1@qt6
 
-USES=		cmake kde:6 qt:6 tar:xz
+USES=		cmake kde:6 kfhack qt:6 tar:xz
 USE_KDE=	coreaddons kded windowsystem \
 		ecm:build
 USE_QT=		base
