--- a/devel/kf6-kbookmarks/Makefile
+++ b/devel/kf6-kbookmarks/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 COMMENT=	Bookmarks management library
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	colorscheme config configwidgets coreaddons widgetsaddons \
 		ecm:build
