--- a/devel/kf6-kconfig/Makefile
+++ b/devel/kf6-kconfig/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 COMMENT=	Persistent platform-independent application settings.
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	ecm:build
 USE_QT=		base declarative tools
