--- a/devel/kf6-kcrash/Makefile
+++ b/devel/kf6-kcrash/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 COMMENT=	Graceful handling of application crashes
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz xorg
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz xorg
 USE_GL=		gl opengl
 USE_KDE=	coreaddons \
 		ecm:build
