--- a/x11-toolkits/kf6-attica/Makefile
+++ b/x11-toolkits/kf6-attica/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 COMMENT=	Open Collaboration Service client library
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake kde:6 qt:6 tar:xz
+USES=		cmake kde:6 kfhack qt:6 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		base
 
