--- a/x11-toolkits/kf6-kcompletion/Makefile
+++ b/x11-toolkits/kf6-kcompletion/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 COMMENT=	Powerful completion framework
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	codecs config widgetsaddons \
 		ecm:build
