--- a/x11-toolkits/kf6-ktextwidgets/Makefile
+++ b/x11-toolkits/kf6-ktextwidgets/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 COMMENT=	Text editing widgets
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gettext gl kde:6 qt:6 tar:xz
+USES=		cmake gettext gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	colorscheme completion config configwidgets i18n sonnet \
 		widgetsaddons \
