--- a/x11-toolkits/kf6-kxmlgui/Makefile
+++ b/x11-toolkits/kf6-kxmlgui/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 COMMENT=	Framework for managing menu and toolbar actions
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gettext gl kde:6 qt:6 tar:xz
+USES=		cmake gettext gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	colorscheme config configwidgets coreaddons globalaccel \
 		guiaddons i18n iconthemes itemviews widgetsaddons \
