--- a/textproc/kf6-kcodecs/Makefile
+++ b/textproc/kf6-kcodecs/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	textproc kde kde-frameworks
 COMMENT=	String encoding library
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gperf kde:6 qt:6 tar:xz
+USES=		cmake gperf kde:6 kfhack qt:6 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		base tools
 
