--- a/textproc/kf6-sonnet/Makefile
+++ b/textproc/kf6-sonnet/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 LIB_DEPENDS=	libaspell.so:textproc/aspell \
 		libhunspell-1.7.so:textproc/hunspell
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	ecm:build
 USE_QT=		base declarative tools
