--- a/textproc/kf6-syntax-highlighting/Makefile
+++ b/textproc/kf6-syntax-highlighting/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	textproc kde kde-frameworks
 COMMENT=	Syntax highlighting engine for Kate syntax definitions
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	ecm:build
 USE_QT=		base tools declarative
