--- a/www/kf5-kjsembed/Makefile
+++ b/www/kf5-kjsembed/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	www kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 library for binding JavaScript objects to QObjects
 
-USES=		cmake compiler:c++11-lib gettext gl kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext gl kde:5 kfhack qt:5 tar:xz
 USE_GL=		gl
 USE_KDE=	i18n js \
 		doctools:build ecm:build
