--- a/www/kf5-khtml/Makefile
+++ b/www/kf5-khtml/Makefile
@@ -8,7 +8,7 @@ COMMENT=	KF5 KTHML rendering engine
 LIB_DEPENDS=	libgif.so:graphics/giflib \
 		libpng.so:graphics/png
 
-USES=		cmake compiler:c++11-lib gettext gperf jpeg kde:5 \
+USES=		cmake compiler:c++11-lib gettext gperf jpeg kde:5 kfhack \
 		qt:5 tar:xz xorg
 USE_KDE=	archive auth bookmarks codecs completion config \
 		configwidgets coreaddons globalaccel i18n iconthemes \
