--- a/www/kf5-kjs/Makefile
+++ b/www/kf5-kjs/Makefile
@@ -7,7 +7,7 @@ COMMENT=	KF5 library providing an ECMAScript interpreter
 
 LIB_DEPENDS=	libpcre.so:devel/pcre
 
-USES=		cmake compiler:c++11-lib kde:5 perl5 pkgconfig qt:5 tar:xz
+USES=		cmake compiler:c++11-lib kde:5 kfhack perl5 pkgconfig qt:5 tar:xz
 USE_KDE=	doctools:build ecm:build
 USE_PERL5=	build
 USE_QT=		core \
